# cleanab

./: .gitignore  README.md  config.yaml.sample  pyproject.toml
cleanab/: cleaner.py  cli.py  fints.py  main.py  transactions.py  utils.py  validators.py
cleanab/apps/: actual.py  base.py  firefly_iii_fidi.py  ynab5.py
cleanab/models/: account_config.py  cleaner.py  config.py  transaction.py
