[project]
name = "cleanab"
version = "0.1.0"
description = "Fetch and clean FinTS/HBCI transactions and push them to connected apps"
authors = [{ name = "Jan Willhaus", email = "mail@janwillhaus.de" }]
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "fints>=4",
    "pyyaml>= 6.0.1",
    "logzero>=1.7.0,<2",
    "click>=8.0",
    "ynab-api",
    "pydantic>=1.10.2",
    "pillow>=11.2.0",
]

[project.scripts]
pycleanab = "cleanab.main:main"

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.uv]

[tool.uv.sources]
ynab-api = { git = "https://github.com/dmlerner/ynab-api" }

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["cleanab"]

[tool.pylint.messages_control]
disable = "all"
